[gd_scene load_steps=32 format=3 uid="uid://dc1y0qs5n466n"]

[ext_resource type="StyleBox" uid="uid://ci3yyoa54a17w" path="res://Theme/YellowPanel.tres" id="1_dj5ey"]
[ext_resource type="Script" uid="uid://c18s5swteqr3n" path="res://Scripts/CardFight/cagefight_team_setup.gd" id="1_enhfx"]
[ext_resource type="PackedScene" uid="uid://dci144io03ffa" path="res://Scenes/CaptainButton.tscn" id="1_ogj7o"]
[ext_resource type="Script" uid="uid://dqled6iv7xaxp" path="res://Scripts/Stats/Captain.gd" id="3_dy7ir"]
[ext_resource type="Script" uid="uid://bm68ow8pgjukx" path="res://Scripts/CardFight/CardHandContainer.gd" id="3_k7fqh"]
[ext_resource type="Resource" uid="uid://caroffy3ubxip" path="res://Resources/Captains/PlayerCaptains/Craden.tres" id="4_vg4g5"]
[ext_resource type="Resource" uid="uid://c6f3bxpe2rsxd" path="res://Resources/Captains/PlayerCaptains/Baron.tres" id="5_qxf1y"]
[ext_resource type="Resource" uid="uid://b1e5ovklwmp7v" path="res://Resources/Captains/PlayerCaptains/Amol.tres" id="6_pu3eg"]
[ext_resource type="Resource" uid="uid://bkfcg5rwf7vhu" path="res://Resources/Captains/PlayerCaptains/Dimitry.tres" id="7_xqytu"]
[ext_resource type="Resource" uid="uid://c75as8yglsqcy" path="res://Resources/Captains/PlayerCaptains/Gilian.tres" id="8_xrsg7"]
[ext_resource type="Resource" uid="uid://baci05am3ufd7" path="res://Resources/Captains/PlayerCaptains/Elena.tres" id="9_gnfpf"]
[ext_resource type="Resource" uid="uid://c8b3lpqbi11up" path="res://Resources/Captains/PlayerCaptains/Jor.tres" id="10_4dtwb"]
[ext_resource type="Resource" uid="uid://mtu8yrc4q3l8" path="res://Resources/Captains/EnemyCaptains/EnemyConvoy1.tres" id="11_nxwre"]
[ext_resource type="Resource" uid="uid://d02w2y7dmmv6c" path="res://Resources/Captains/EnemyCaptains/EnemyFireship1.tres" id="12_5o5j4"]
[ext_resource type="Resource" uid="uid://bipfcwumlbq7u" path="res://Resources/Captains/EnemyCaptains/EnemyFireship2.tres" id="13_rew5m"]
[ext_resource type="Resource" uid="uid://cphts382xybqn" path="res://Resources/Captains/EnemyCaptains/EnemyFireship3.tres" id="14_x78ca"]
[ext_resource type="Resource" uid="uid://5jwwsypnqyqo" path="res://Resources/Captains/EnemyCaptains/EnemyFireship4.tres" id="15_ghkrv"]
[ext_resource type="Resource" uid="uid://quqnjrytm6df" path="res://Resources/Captains/EnemyCaptains/EnemyMissileCarrier1.tres" id="16_0k8o1"]
[ext_resource type="Resource" uid="uid://6n7k1biixh2y" path="res://Resources/Captains/EnemyCaptains/EnemyMissileCarrier2.tres" id="17_bwix1"]
[ext_resource type="Resource" uid="uid://dl7x2cmre3owx" path="res://Resources/Captains/EnemyCaptains/EnemyMissileCarrier3.tres" id="18_ap8tj"]
[ext_resource type="Resource" uid="uid://3hahntw45cog" path="res://Resources/Captains/EnemyCaptains/EnemyMissileCarrier4.tres" id="19_uhrxp"]
[ext_resource type="Resource" uid="uid://y1ohb6oss4v0" path="res://Resources/Captains/EnemyCaptains/EnemyRadarShip1.tres" id="20_rndrq"]
[ext_resource type="Resource" uid="uid://dakrxyltg3y8x" path="res://Resources/Captains/EnemyCaptains/EnemyRadarShip2.tres" id="21_kwn1m"]
[ext_resource type="Resource" uid="uid://bfqcga4l0b5l5" path="res://Resources/Captains/EnemyCaptains/EnemyRadarShip3.tres" id="22_u0mhj"]
[ext_resource type="Resource" uid="uid://bvv346qqjamj6" path="res://Resources/Captains/EnemyCaptains/EnemyRadarShip4.tres" id="23_a3j27"]
[ext_resource type="Resource" uid="uid://cf4b4c1bssfsr" path="res://Resources/Captains/EnemyCaptains/EnemyTanker1.tres" id="24_uosmh"]
[ext_resource type="Resource" uid="uid://wdewnahxdu77" path="res://Resources/Captains/EnemyCaptains/EnemyTanker2.tres" id="25_x7xa8"]
[ext_resource type="Resource" uid="uid://b4smeavm0axw3" path="res://Resources/Captains/EnemyCaptains/EnemyTanker3.tres" id="26_kavl2"]
[ext_resource type="Resource" uid="uid://cvk1mvgokhtus" path="res://Resources/Captains/EnemyCaptains/EnemyTanker4.tres" id="27_l2hbq"]
[ext_resource type="Resource" uid="uid://cta70yn02gqg5" path="res://Resources/Captains/EnemyCaptains/LandEnemyFireship1.tres" id="28_8yqr3"]
[ext_resource type="Resource" uid="uid://8nr6ss128jfn" path="res://Resources/Captains/EnemyCaptains/LandEnemyFireship2.tres" id="29_wis72"]

[node name="CagefightTeamComp" type="Control" node_paths=PackedStringArray("CharacterButtonPlacement", "PlayerTeamPlacement", "EnemyTeamPlacement")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_enhfx")
CharButton = ExtResource("1_ogj7o")
PossibleCharacters = Array[ExtResource("3_dy7ir")]([ExtResource("4_vg4g5"), ExtResource("5_qxf1y"), ExtResource("6_pu3eg"), ExtResource("7_xqytu"), ExtResource("8_xrsg7"), ExtResource("9_gnfpf"), ExtResource("10_4dtwb"), ExtResource("11_nxwre"), ExtResource("12_5o5j4"), ExtResource("13_rew5m"), ExtResource("14_x78ca"), ExtResource("15_ghkrv"), ExtResource("16_0k8o1"), ExtResource("17_bwix1"), ExtResource("18_ap8tj"), ExtResource("19_uhrxp"), ExtResource("20_rndrq"), ExtResource("21_kwn1m"), ExtResource("22_u0mhj"), ExtResource("23_a3j27"), ExtResource("24_uosmh"), ExtResource("25_x7xa8"), ExtResource("26_kavl2"), ExtResource("27_l2hbq"), ExtResource("28_8yqr3"), ExtResource("29_wis72")])
CharacterButtonPlacement = NodePath("PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer")
PlayerTeamPlacement = NodePath("PanelContainer/HBoxContainer/VBoxContainer/PlayerTeam/VBoxContainer/CardHandContainer")
EnemyTeamPlacement = NodePath("PanelContainer/HBoxContainer/VBoxContainer/EnemyTeam/VBoxContainer/CardHandContainer")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_dj5ey")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerTeam" type="PanelContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_dj5ey")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/PlayerTeam"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/PlayerTeam/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Player Team"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardHandContainer" type="Container" parent="PanelContainer/HBoxContainer/VBoxContainer/PlayerTeam/VBoxContainer"]
custom_minimum_size = Vector2(0, 76)
layout_mode = 2
size_flags_vertical = 6
mouse_filter = 2
script = ExtResource("3_k7fqh")
metadata/_custom_type_script = "uid://bm68ow8pgjukx"

[node name="EnemyTeam" type="PanelContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_dj5ey")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/EnemyTeam"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/EnemyTeam/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Enemy Team"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardHandContainer" type="Container" parent="PanelContainer/HBoxContainer/VBoxContainer/EnemyTeam/VBoxContainer"]
custom_minimum_size = Vector2(0, 76)
layout_mode = 2
size_flags_vertical = 6
script = ExtResource("3_k7fqh")
metadata/_custom_type_script = "uid://bm68ow8pgjukx"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Random" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 26
text = "Pick Random"

[node name="Ready" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 26
text = "Start Fight"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_dj5ey")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
alignment = 1

[connection signal="mouse_entered" from="PanelContainer/HBoxContainer/VBoxContainer/PlayerTeam" to="." method="_on_player_team_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/HBoxContainer/VBoxContainer/PlayerTeam" to="." method="_on_player_team_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/HBoxContainer/VBoxContainer/EnemyTeam" to="." method="_on_enemy_team_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/HBoxContainer/VBoxContainer/EnemyTeam" to="." method="_on_enemy_team_mouse_exited"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/Random" to="." method="_on_random_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/Ready" to="." method="_on_ready_pressed"]
